# TMPEConfig

./: 1637663252 (symlink)  README.md  TMPEConfig.desktop  TMPE_GlobalConfig.xml  TMPE_GlobalConfig2.xml  TMPE_GlobalConfig_v17.xml  pyproject.toml  tmpeconfig-win.spec  tmpeconfig.spec
tmpeconfig/: __init__.py  __main__.py
